--- a/style.css
+++ b/style.css
@@ -88,12 +88,13 @@ a:hover {
   height: 24px;
   width: 30px;
   cursor: pointer;
+  color: white;
 }
 
 .hamburger-icon span {
   width: 100%;
   height: 2px;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   transition: all 0.3 ease-in-out;
 }
 
@@ -216,7 +217,7 @@ section {
 
 .icon {
   cursor: pointer;
-  height: 2rem;
+  height: 3rem;
 }
 
 /* BUTTONS */
@@ -430,8 +431,7 @@ article .icon {
 /* FOOTER SECTION */
 
 footer {
-  height: 26vh;
-  margin: 0 1rem;
+  height: 20vh;
 }
 
 footer p {
